--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged && yarn lint:fix"
   },
   "lint-staged": {
     "*.{js,jsx,vue}": [
-      "yarn lint:fix",
+      "vue-cli-service lint",
       "git add"
     ]
   }
