--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
-    "pre-commit": "yarn lint && lint-staged"
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
+      "yarn lint",
       "git add"
     ]
   }
