--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged && yarn lint"
   },
   "lint-staged": {
     "*.{js,jsx,vue}": [
